summative.moria.Moria.scala.error
Compilation error:
Moria:2: error: not found: type Direction
  setDirection(Direction.EST:Direction)
                             ^Moria:2: error: not found: value Direction
  setDirection(Direction.EST:Direction)
               ^