summative.moria.Moria.scala.code
def deplace{
  setDirection(Direction.EST:Direction)
  avance()
}